redifood/templates/production/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - { { .Values.prodDomain } }
        - { { .Values.prodWwwDomain } }
      secretName: { { .Values.hostSecret } }
  rules:
    - host: { { .Values.prodDomain } }
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.backendSrv } }
                port:
                  number: { { .Values.backendPort } }
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.clientSrv } }
                port:
                  number: { { .Values.clientPort } }
    - host: { { .Values.prodWwwDomain } }
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.backendSrv } }
                port:
                  number: { { .Values.backendPort } }
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: { { .Values.clientSrv } }
                port:
                  number: { { .Values.clientPort } }

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname:
      { { .Values.prodWwwDomain } }
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
